# edag_dron

./: .gitignore  README.md
install/: local_setup.sh  setup.ps1  setup.sh
log/: latest_build
src/: sim_bridge.yaml
src/PX4-Autopilot/Tools/simulation/gz/worlds/: default.sdf
src/control/: CMakeLists.txt  package.xml
src/control/scripts/: armdisarm.py  offboard_takeoff.py  pose_teller.py  prueba.py
src/description/: CMakeLists.txt  package.xml
src/drone_gui_pkg/: main_gui.py  main_gui_2.py  main_gui_3.py
src/gazebo_plugins/: CMakeLists.txt  package.xml
src/gazebo_plugins/include/: uuv_dynamic_model.h
src/gazebo_plugins/src/: SubmarineDynamics.cpp
src/master/: CMakeLists.txt  package.xml
src/master/config/: edag_db.db  mision_actual.yaml  mision_base.yaml
src/master/launch/: gazebo_launch.py
src/master/misiones/: escaneo.yaml  prueba.yaml
src/master/scripts/: mission_handler.py  mission_handler_2.py  mission_handler_prueba.py
src/master/srv/: CondicionesVuelo.srv  ConfigurarVuelo.srv
src/mision/: CMakeLists.txt  package.xml
src/vision/: CMakeLists.txt  package.xml
src/vision/scripts/: aruco_detector.py  camera.py  foto.py  nodo_camara.py  qr_detector.py  receptor_udp.py
src/visualizacion/: CMakeLists.txt  package.xml
src/visualizacion/models/dron/meshes/: djimini4pro.mtl
src/visualizacion/models/propela/meshes/: propela.mtl
src/visualizacion/scripts/: app_dron.py
src/visualizacion/urdf/: dron.urdf  dron2.config  dron2.sdf  dron3.sdf
src/visualizacion/worlds/: mundo.sdf
(+4 files in other folders)
